# rpi_project

./: CMakeLists.txt  README.md
PIproject/: main.cpp  shared.h
tests/: CMakeLists.txt  MVPTestes.cpp
